<resources>
    <!-- Application name -->
    <string name="app_name">Digiwave</string>

    <!-- Application version information -->
    <string name="app_version">version %d.%d.%d</string>
    <string name="app_version_sample">version 1.0.0</string>

    <!-- Content description strings -->
    <string name="cd_applicationLogo">Application logo</string>
    <string name="cd_featureImage">Feature picture</string>
    <string name="cd_appbar_numsys">Icon number system</string>
    <string name="cd_appbar_gate">Icon logic gate</string>
    <string name="cd_appbar_title">Vector of application title</string>
    <string name="cd_icon_logic_gate">Icon logic gate mode: %s</string>
    <string name="cd_gate_icon">%1$s Gate graphic display</string>
    <string name="cd_lamp">Lamp icon, used as a indicator for on or off state of gate simulation result</string>
    <string name="cd_start_simulation">Used for start simulation</string>
    <string name="cd_stop_simulation">Used for stop simulation</string>
    <string name="cd_icon_book">Book icon</string>
    <string name="cd_see_pdf">Used for see pdf file of subject material</string>

    <!-- Application content strings -->
    <string name="numberSystemFeatureName">Number System</string>
    <string name="karnaughMapFeatureName">Karnaugh Map</string>
    <string name="logicGateFeatureName">Logic Gate Simulator</string>

    <string name="numberSystemFeatureDesc">This feature is used to perform number system and code system conversions.</string>
    <string name="karnaughMapFeatureDesc">This feature is used to simulate the Karnaugh map in simplifying the logic equations of digital numbers with graphical representations.</string>
    <string name="logicGateFeatureDesc">This feature is used to perform simulations in building logic gate circuits and analyze the result obtained from the simulation process.</string>
    <string name="code_system_tab_title">Code System</string>

    <string name="bin_text">Binary</string>
    <string name="dec_text">Decimal</string>
    <string name="oct_text">Octal</string>
    <string name="hex_text">Hexadecimal</string>
    <string name="placeholder_bin_number">0100 101111</string>
    <string name="placeholder_dec_number">0329</string>
    <string name="placeholder_oct_number">0367</string>
    <string name="placeholder_hex_number">036F</string>
    <string name="first_hex_allowed_symbol">A</string>
    <string name="last_hex_allowed_symbol">F</string>

    <string name="bcd_text">Binary-Coded Decimal</string>
    <string name="xs3_text">Excess-3</string>
    <string name="gray_code_text">Gray Code</string>
    <string name="placeholder_bcd_number">0111 0101</string>
    <string name="placeholder_xs3_number">0110 0011</string>
    <string name="placeholder_gray_code_number">1000 0001</string>

    <string name="kmap_type">Type: SoP</string>
    <string name="kmap_answer_title">Answer:</string>
    <string name="kmap_two_variables_exp00">00</string>
    <string name="kmap_two_variables_exp01">01</string>
    <string name="kmap_two_variables_exp11">11</string>
    <string name="kmap_two_variables_exp10">10</string>
    <string name="kmap_answer_not_defined">N/D</string>
    <string name="kmap_variables">%d Variables</string>

    <string name="stop_condition">Simulation has stopped</string>
    <string name="play_condition">Simulation has started</string>

    <!-- NOTE: Please do not changed this code, it may cause an Exception -->
    <!-- [START] dropdown array strings -->
    <string name="auto_complete_tv_default_mode">Binary \u21C4 Binary-Coded Decimal</string>
    <string-array name="code_system_mode">
        <item>Binary \u21C4 Binary-Coded Decimal</item>
        <item>Binary \u21C4 Excess-3</item>
        <item>Binary \u21C4 Gray Code</item>
    </string-array>

    <string-array name="gate_list">
        <item>AND Gate</item>
        <item>OR Gate</item>
        <item>NOT Gate</item>
        <item>NAND Gate</item>
        <item>NOR Gate</item>
        <item>XOR Gate</item>
        <item>XNOR Gate</item>
    </string-array>
    <!-- [END] dropdown array strings -->

    <!-- hints -->
    <string name="hint_dropdown_code_system">Modes</string>
    <string name="hint_bcd_keyword">BCD</string>
    <string name="hint_xs3_keyword">XS3</string>
    <string name="hint_gate_list">Gates</string>

    <!-- error description string  -->
    <string name="et_error_format">Please input allowed digit: (%1$d-%2$d)</string>
    <string name="et_error_format_with_symbol">Please input allowed digit and symbol: (%1$d-%2$d) \u0026 (%3$s-%4$s)</string>
    <string name="err_exceeding_limit">The number is exceeds the maximum limit</string>
    <string name="error_radix_namespace">radix=%d</string>
    <string name="nybble_error">Contain %1$s forbidden 4-bit: %2$s</string>


    <!-- string samples -->
    <string name="sample_kmap_variable">2 Variable</string>
    <string name="sample_kmap_result">R = !A.B</string>
    <string name="sample_kmap_variable_identifier">AB</string>
    <string name="sample_kmap_2variable">BC</string>
    <string name="sample_kmap_2variable_cd">CD</string>
    <string name="sample_kmap_1variable">A</string>
    <string name="sample_and_gates">AND Gate</string>
    <string name="sample_material_title">Subject Material #1</string>
    <string name="sample_material_desc">Algebra Boolean</string>

    <string name="language_preferences">Language Preferences</string>
    <string name="subject_materials">Subject Materials</string>
    <string name="subject_material_title">Subject Material #%1$s</string>

    <string name="desc_subject_contract">Subject Contract</string>
    <string name="desc_subject_numsys">Number system</string>
    <string name="desc_subject_codesys">Code system</string>
    <string name="desc_subject_electronics_comps">Electronics components</string>
    <string name="desc_subject_logate">Logic gate</string>
    <string name="desc_subject_digital_circuit">Digital circuit and Timing Diagram</string>
    <string name="desc_subject_kmap">Karnaugh Map</string>
    <string name="desc_subject_mid_exams">Mid-term exams</string>
    <string name="desc_subject_bool_algebra">Boolean Algebra</string>
    <string name="desc_subject_seven_segments">Seven segments</string>
    <string name="desc_subject_register_counter">Register and Counter</string>
    <string name="desc_subject_comparator_multiplexer">Comparator and De-multiplexer Multiplexer Circuits</string>
    <string name="desc_subject_flip_flop">Flip-flop</string>
    <string name="desc_subject_decoder_encoder">Decoder and Encoder</string>
    <string name="desc_subject_final_exams">Final exams</string>
    
    <string name="text_downloading">Downloading…</string>
    <string name="text_error_message">Error</string>
    <string name="text_check_internet">Check your internet connection and Try again.</string>
    <string name="text_try_again">Try again</string>

    <string name="see_formulation">See Formulation</string>
    <string name="cannot_see_the_formulation">Can\'t see the formulation for negative numbers</string>
    <string name="empty_input">Inputs are empty</string>
    <string name="bin_formulation_title">BIN:</string>
    <string name="oct_formulation_title">OCT:</string>
    <string name="hex_formulation_title">HEX:</string>
    <string name="dec_formulation_title">DEC:</string>
    <string name="radio_is_not_selected">None of the radios is selected</string>
    <string name="formulation_title">Formulation:</string>
    <string name="bin_to_dec">Bin to Dec</string>
    <string name="oct_to_dec">Oct to Dec</string>
    <string name="hex_to_dec">Hex to Dec</string>
</resources>
