<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FillContainer.FillViewPort"
    tools:context=".views.features.kmap.branch.KmapTwoFragment">

    <include
        android:id="@+id/inc_kmap_graphic"
        style="@style/FillContainer"
        layout="@layout/layout_kmap2_graphic" />

</androidx.core.widget.NestedScrollView>
